<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.awsmtexh.asle.quizgame.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#006699">

    <Button
        android:id="@+id/relativ_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="@drawable/relativ_knapp"
        android:text="@string/relativ_knapp"
        android:textSize="12sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/matsredigert"/>

    <TextView
        android:id="@+id/sporsmaal_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/rett_knapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:text="@string/riktig_svar" />

        <Button
            android:id="@+id/feil_knapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/red_button"
            android:text="@string/feil_svar" />


    </LinearLayout>

    <Button
        android:id="@+id/neste_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/next_button"
        android:text="@string/neste_knappTekst" />

    <Button
        android:id="@+id/jukse_knapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/jukse_knapp"
        android:text="@string/juks_knapp_tekst" />

</LinearLayout>
